# AI-Agent-learning

./: .gitignore  pyproject.toml
app/: common.py
app/code_agent/agent/: agent_chat.py  code_agent.py  langgraph_code_agent.py  langgraph_workflow.py  model_chat.py
app/code_agent/mcp/: mysql_tools.py  rag_tools.py  vm.py
app/code_agent/model/: chat_gpt_model.py
app/code_agent/prompt/: multi_chat_prompt.py  system_prompt.py
app/code_agent/rag/: rag.py
app/code_agent/tools/: file_saver.py  file_tools.py  mysql_tools.py  vm_tools.py
app/mcp/google_map/: map_mcp_client.py
app/mcp/sse/: mcp_sse_client.py  mcp_sse_server.py
app/mcp/stdio/: mcp_playwright_client.py  mcp_stdio_client.py  mcp_stdio_server.py
app/ollama/: ollama.py
app/skills/: file_operation.txt  react_project_creator.md  skill_generation.txt  terminal.txt
