[project]
name = "ai-agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-mongodb>=0.3.1",
    "langgraph-checkpoint-redis>=0.4.1",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
]
