[project]
name = "ai-agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alibabacloud-bailian20231229==1.8.2",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-mongodb>=0.3.1",
    "langgraph-checkpoint-redis>=0.4.1",
    "langgraph-supervisor>=0.0.31",
    "langsmith>=0.8.0",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
    "pymysql>=1.2.0",
    "selenium>=4.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
